--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,14 @@ plugins {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
 
     defaultConfig {
         applicationId "com.github.grishberg.asyncrv"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -29,14 +27,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "com.google.dagger:dagger:$dagger_version"
-
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation "com.android.support:recyclerview-v7:27.1.1"
+    implementation "com.github.grishberg:debugconsole:1.0.1"
+    implementation "com.android.support:cardview-v7:27.1.1"
+    implementation "com.google.dagger:dagger:2.28.1"
 
     implementation project(':asyncviewbuilder')
-
 }
