--- a/asyncviewbuilder/build.gradle
+++ b/asyncviewbuilder/build.gradle
@@ -7,11 +7,11 @@ ext {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName '0.1.0'
     }
@@ -26,9 +26,8 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
 //need to call  ./gradlew clean build generateRelease
 apply from: 'android-release-aar.gradle'
